--- a/.github/workflows/Releases.yml
+++ b/.github/workflows/Releases.yml
@@ -1,12 +1,12 @@
-name: 自动构建二进制文件并发布
+name: 构建二进制文件并发布
 
 on:
-  push:
-    branches: [ dev ]
-    tags:
-      - 'v*'  # 版本号标记
-  pull_request:
-    branches: [ dev ]
+  #push:
+  #  branches: [ dev ]
+  #  tags:
+  #    - 'v*'  # 版本号标记
+  #pull_request:
+  #  branches: [ dev ]
   workflow_dispatch:
 
 permissions:
