--- a/.github/workflows/Builds.yml
+++ b/.github/workflows/Builds.yml
@@ -2,11 +2,11 @@ name: 构建 Docker 镜像并发布
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
     tags:
       - 'v*'  # 版本号标记
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
   workflow_dispatch:
 
 # 权限配置：仅授予GHCR推送必需的最小权限
