--- a/.github/workflows/Releases.yml
+++ b/.github/workflows/Releases.yml
@@ -2,11 +2,11 @@ name: 构建二进制文件并发布
 
 on:
   #push:
-  #  branches: [ dev ]
+  #  branches: [ main ]
   #  tags:
   #    - 'v*'  # 版本号标记
   #pull_request:
-  #  branches: [ dev ]
+  #  branches: [ main ]
   workflow_dispatch:
 
 permissions:
